--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
-  "dependencies": {
+  
+
+  "config": {
+    "ionic_copy": "./config/copy.config.js"
+  },
+
+    "dependencies": {
     "@angular/common": "5.0.0",
     "@angular/compiler": "5.0.0",
     "@angular/compiler-cli": "5.0.0",
@@ -24,6 +30,7 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
+    "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -34,5 +41,6 @@
     "@ionic/app-scripts": "3.1.0",
     "typescript": "2.4.2"
   },
+  
   "description": "An Ionic project"
 }
